[api][runtime][java][python] Align skill URL validation